test/tests/stages/9_functions/invalid_declarations/undeclared_fun.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  const int(3)
  )
  ;
  }
  int
  identifier(foo)
  (
  int
  identifier(a)
  )
  {
  return
  const int(1)
  ;
  }
